MEJORAMOS PRÁCTICA
Lexico
- Arreglamos multicomentario

SinAndSem
- Cambiamos la estructura de Decl para array
- El valor de la dimensión de un array, será un literal en decl
- Añadimos regla semántica para que no pueda haber una función con el nombre principal

Intermedio
- el metodo buscarVariable solo se le llama desde Ensamblador
- Las variables locales tendran la estructura id$idFuncion

Optimización y supresión de metodos inutilzados

Co-authored-by: AdondeBoy <106172989+adondeboy@users.noreply.github.com>